# qrreader-serial

./: .codacy.yml  .cppcheck  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_GITHUB_PAGES_APT.md  README_GITHUB_RELEASES.md  README_PACKAGING.md  README_PYINSTALLER.md  README_windows_cpp.md  SECURITY.md  install.sh  non-requirements.txt  qrreader.pyw  qrreader.service  qrreader.spec  qrreader_linux  qrreader_linux.cpp  qrreader_service.cpp  qrreader_tray.cpp  qrreader_tray.rc  qrreader_win_common.cpp  qrreader_win_common.hpp  qrreader_windows.cpp  requirements-build-py36.txt  requirements-build-ubuntu16.txt  requirements.txt  resource.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-c.yml  release-cpp.yml  release.yml
apt/: Packages  Release
apt/cpp/: Packages  Release  qrreader-cpp_4.1.1-1_amd64.deb  qrreader-cpp_4.1.2-1_amd64.deb
apt/python/: Packages  Release
build-windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  qrreader.sln  qrreader_service.vcxproj  qrreader_service.vcxproj.filters  qrreader_tray.vcxproj  qrreader_tray.vcxproj.filters  qrreader_win_common.vcxproj  qrreader_win_common.vcxproj.filters  qrreader_windows.vcxproj  qrreader_windows.vcxproj.filters
build-windows/Release/: qrreader_win_common.lib
build-windows/qrreader_service.dir/Release/: qrreader_service.exe.recipe
build-windows/qrreader_tray.dir/Release/: qrreader_tray.exe.recipe  qrreader_tray.res
build-windows/qrreader_win_common.dir/Release/: qrreader_win_common.lib.recipe
build-windows/qrreader_windows.dir/Release/: qrreader_windows.exe.recipe
debian/: changelog  control  copyright  postinst  postrm  rules
debian/default/: update.url
debian_cpp/: changelog  control  copyright  install  postinst  qrreader.conffiles  rules
scripts/: build-cpp.sh  build-deb-cpp.sh  build-deb-ubuntu16.sh  build-deb.sh  build-pyinstaller-ubuntu16.sh  build-pyinstaller.bat  build-pyinstaller.ps1  build-pyinstaller.sh  build-release-cpp.sh  build-release-ubuntu16.sh  build-release.sh  configure-update-url.sh  ensure-apt-packages.sh  install-from-github-release.sh  install-pyinstaller.bat  install-pyinstaller.ps1  install-pyinstaller.sh  install-release-build-deps.sh  resolve-release-version.sh  run-tests.sh  setup-apt-repo.sh  sync-version-from-tag.sh
src/: CMakeLists.txt  README_linux_cpp.md  process_io.cpp  process_io.h  qrreader_linux.cpp
src/test/: qrreader_linux_test.cpp  sync-version-from-tag_test.sh
(+45 files in other folders)
